# AED_rate

./: .gitignore  README.md  pyproject.toml
aed_rate/: __init__.py  aed_calculator.py
aed_rate/electronic/: __init__.py  continuum.py  coupling.py  potential.py  wavefunctions.py
aed_rate/nuclear/: __init__.py  _base_solver.py  dvr_solver.py  morse_solver.py  nuclear_wavefunction.py  numerov_solver.py
aed_rate/rate/: __init__.py  state_to_state.py  thermal.py
aed_rate/utils/: __init__.py  constants.py  plotting.py
docs/: theory.md
notebooks/: draft.ipynb
scripts/: compute_lih_cross_section.py  compute_lih_pecs.py  plot_coupling_integrand.py  plot_cross_section.py  plot_morse_wavefunctions.py  plot_wavefunction_analysis.py  precompute_coupling.py  test_plausibility.py  validate_acharya.py
